# god-of-thunder

./: .gitignore  CMakeLists.txt  vcpkg-Windows.txt
.github/workflows/: cmake.yml  cmake2.yml
src/: 1_BACK.C  1_BACK.CPP  1_BOSS1.C  1_BOSS1.CPP  1_BOSS21.C  1_BOSS21.CPP  1_BOSS22.C  1_BOSS22.CPP  1_DEFINE.H  1_DIALOG.C  1_DIALOG.CPP  1_FILE.C  1_FILE.CPP  1_GRP.C  1_GRP.CPP  1_IMAGE.C  1_INIT.C  1_INIT.CPP  1_MAIN.C  1_MAIN.CPP  1_MASK.H  1_MOVE.C  1_MOVPAT.C  1_MOVPAT.CPP  1_MUSIC.C  1_OBJECT.C  1_OBJECT.CPP  1_PANEL.C  1_PANEL.CPP  1_PROTO.H  1_SBFX.C  1_SBFX.CPP  1_SCRIPT.C  1_SCRIPT.CPP  1_SHTMOV.C  1_SHTMOV.CPP  1_SHTPAT.C  1_SOUND.C  1_SOUND.CPP  1_SPTILE.C  (+74 more)
src/new/: new.c  new.h
